syntax = "proto3";

package events_svc;

option go_package = "auth-service/internal/adapter/grpc/server/frontend/proto/events";

import "google/protobuf/timestamp.proto";

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool is_deleted = 7;
}

message UserCreated {
  User user = 1;
}

message UserUpdated {
  User user = 1;
}

message UserDeleted {
  int64 id = 1;
}

message EmailSendRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
}
